<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/activity_set_db_connection_view_top"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_set_db_connection_image_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_with_brands_logo"
        app:layout_constraintBottom_toBottomOf="@+id/activity_set_db_connection_view_top"
        app:layout_constraintEnd_toEndOf="@+id/activity_set_db_connection_view_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_set_db_connection_view_top"
        app:srcCompat="@drawable/eleclerc_logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_set_db_connection_view_top">

        <EditText
            android:id="@+id/activity_set_db_connection_et_dbname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_database_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/database_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/activity_set_db_connection_et_dbinstance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="text"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_instance_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/database_instance"
            android:inputType="textPersonName"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/activity_set_db_connection_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_person_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <EditText
            android:id="@+id/activity_set_db_connection_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <EditText
            android:id="@+id/activity_set_db_connection_et_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="ip"
            android:background="@drawable/round_border"
            android:digits="1234567890."
            android:drawableStart="@drawable/ic_ip_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/database_ip"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="16dp" />

        <EditText
            android:id="@+id/activity_set_db_connection_et_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="number"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_socket_wrench_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/database_port"
            android:inputType="number"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/activity_set_db_connection_btn_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:onClick="cancelButton"
                android:text="@string/cancel"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/activity_set_db_connection_btn_confirm"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:onClick="saveButton"
                android:text="@string/save"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>