<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person_24dp"
        android:drawablePadding="16dp"
        android:hint="@string/name_surname"
        android:padding="16dp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_btn_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_view_top"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/activity_main_btn_scan"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_default"
        android:enabled="false"
        android:onClick="goNextButton"
        android:text="@string/next"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <view
        android:id="@+id/activity_main_view_top"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_main_image_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_with_brands_logo"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_view_top"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_view_top"
        app:layout_constraintStart_toStartOf="@+id/activity_main_view_top"
        app:layout_constraintTop_toTopOf="@+id/activity_main_view_top"
        app:srcCompat="@drawable/eleclerc_logo" />

    <view
        android:id="@+id/view"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_border_big"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_btn_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_username"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view">

        <TextView
            android:id="@+id/activity_main_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_border_divider"
            android:padding="4dp"
            android:text="@string/scan_first"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_main_tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/activity_main_tv_converter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/activity_main_tv_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/activity_main_checkBox_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:enabled="false"
        android:padding="8dp"
        android:text="@string/not_enough_labels"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_btn_set_exp_date"
        app:layout_constraintEnd_toEndOf="@+id/view" />

    <CheckBox
        android:id="@+id/activity_main_checkBox_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="2"
        android:enabled="false"
        android:padding="8dp"
        android:text="@string/wrong_price"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_btn_set_aisle"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <Button
        android:id="@+id/activity_main_btn_set_exp_date"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/btn_default"
        android:enabled="false"
        android:onClick="datePickerDialogButton"
        android:text="@string/set_expiration_date"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/activity_main_btn_set_aisle" />

    <Button
        android:id="@+id/activity_main_btn_set_aisle"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/btn_default"
        android:onClick="aislePickerDialogButton"
        android:text="@string/set_aisle"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/activity_main_btn_set_exp_date" />

</androidx.constraintlayout.widget.ConstraintLayout>